feat: add remove topic from forum
