# backend/internal/handler/forum.go
@@ -18,6 +18,7 @@ type ForumHandler interface {
 	FindByID(c echo.Context) error
 	Update(c echo.Context) error
 	Delete(c echo.Context) error
+	RemoveTopic(c echo.Context) error
 }
 
 type forumHandler struct {
@@ -171,6 +172,40 @@ func (h *forumHandler) Delete(ctx echo.Context) error {
 	}
 
 	if err := h.forumService.Delete(*req); err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			return echo.NewHTTPError(http.StatusNotFound, "forum not found")
+		}
+
+		return err
+	}
+
+	return ctx.NoContent(http.StatusOK)
+}
+
+// @Summary		Remove Topic from Forum
+// @Description	Remove a topic from a specific forum by its ID
+// @Tags			Forums
+// @Accept			json
+// @Param			id		path	string					true	"Forum ID"
+// @Param			topic	body	web.ForumRemoveTopic	true	"Remove Topic from Forum"
+// @Success		204
+// @Security		BearerAuth
+// @Router			/forums/{id}/topic [delete]
+func (h *forumHandler) RemoveTopic(ctx echo.Context) error {
+	req := new(web.ForumRemoveTopic)
+	if err := ctx.Bind(req); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	user := ctx.Get("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	req.UserID = uint(claims["user_id"].(float64))
+
+	if err := h.validator.Struct(req); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	if err := h.forumService.RemoveTopic(*req); err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			return echo.NewHTTPError(http.StatusNotFound, "forum not found")
 		}
